# nettest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: MANUAL_TESTS.md
docs/superpowers/plans/: 2026-05-10-nettest.md
docs/superpowers/specs/: 2026-05-10-network-test-utility-design.md
examples/: nettest.yaml
packaging/: build_release.ps1  build_release.sh  nettest.spec
src/nettest/: __init__.py  __main__.py  autodetect.py  bus.py  config.py  events.py  host.py  scheduler.py  sysinfo.py  target_resolver.py  types.py
src/nettest/cli/: __init__.py  __main__.py  args.py  binding.py  main.py  replay.py
src/nettest/patterns/: __init__.py  detector.py  rules.py  window.py
src/nettest/probes/: __init__.py  bandwidth.py  base.py  dns_cached.py  dns_uncached.py  http.py  mtu.py  ping.py  registry.py  stream.py  tcp_connect.py  traceroute.py  wifi.py
src/nettest/storage/: __init__.py  background.py  event_sink.py  jsonl_sink.py  (+4 more)
tests/: conftest.py  test_autodetect.py  test_bus.py  test_cli_args.py  test_cli_binding.py  test_cli_main.py  test_cli_replay.py  test_cli_snapshot.py  test_config.py  test_e2e_smoke.py  test_events.py  test_host.py  test_jsonl_sink.py  test_pattern_detector.py  test_pattern_rules.py  test_patterns_window.py  test_probe_bandwidth.py  test_probe_base.py  test_probe_dns_cached.py  test_probe_dns_uncached.py  test_probe_http.py  test_probe_mtu.py  test_probe_ping.py  test_probe_registry.py  test_probe_stream.py  test_probe_tcp_connect.py  test_probe_traceroute.py  test_probe_wifi.py  test_retention.py  test_rollups.py  test_scheduler.py  test_sqlite_sink.py  test_storage_background.py  test_storage_schema.py  test_sysinfo.py  test_target_resolver.py  test_tui_aggregator.py  test_tui_app.py  test_tui_detail.py  test_tui_health.py  (+5 more)
(+14 files in other folders)
